Made code more readable (and small fix in css)

--- a/ice_based_server/client/hide_all.css
+++ b/ice_based_server/client/hide_all.css
@@ -12,7 +12,7 @@
 
 #chatinput
 {
-    width: 270px !important;
+    width: 290px !important;
 }
 
 #chatinput:after
